bin/testsuite/tests/compiler/src/errors/compiler2853.swg
#global testerror "Err0571"
#global #[Swag.Safety(.All, .Overflow, true)]
var x1 = -cast(s8) (-1's8 - Swag.S8.Max)
